--- a/app/views/characters/char-list.html
+++ b/app/views/characters/char-list.html
@@ -1,7 +1,12 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h2>Active Characters</h2>
+            <h2>Characters</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+            <button type="button" class="btn" ng-click="charClick()">New...</button>
         </div>
     </div>
     <div class="row">
