NEW: Creator Page made w/Side-nav feature MODIFY: Navbar fixed top issues

--- a/app/shared/css/view/style.css
+++ b/app/shared/css/view/style.css
@@ -32,3 +32,11 @@
 .condition-btn {
 
 }
+
+.bs-sidebar li.active {
+    border-right: 2px solid royalblue;
+}
+
+.content {
+    margin-top: 70px;
+}
