--- a/app/views/creator/creator.html
+++ b/app/views/creator/creator.html
@@ -17,19 +17,18 @@
         </div>
         <div class="col-md-11">
             <body class="content">
-                <div>
+                <div ng-controller="ConceptCtrl">
                     <div class="page-header">
                         <h1 id="step1">Step 1 - Choose Concept</h1>
                     </div>
-                    <p>
-                        If jQuery is available, angular.element is an alias for the jQuery function. If jQuery is not available, angular.element delegates to Angular's built-in subset of jQuery, called "jQuery lite" or jqLite.
-
-                        jqLite is a tiny, API-compatible subset of jQuery that allows Angular to manipulate the DOM in a cross-browser compatible way. jqLite implements only the most commonly needed functionality with the goal of having a very small footprint.
-
-                        To use jQuery, simply ensure it is loaded before the angular.js file. You can also use the ngJq directive to specify that jqlite should be used over jQuery, or to use a specific version of jQuery if multiple versions exist on the page.
-                    </p>
+                    <div class="row" ng-repeat="row in (concepts | numRowFilter:conceptRows)">
+                        <button class="btn btn-default concept-btn" ng-click="conceptClick($index + $parent.$index * conceptColumns)" ng-repeat="concept in (concepts | numColFilter:row:conceptColumns)">{{concept.name}}</button>
+                    </div>
+                    <div class="row">
+                        <pre>{{createConcept | json}}</pre>
+                    </div>
                 </div>
-                <div>
+                <div ng-controller="MetatypeCtrl">
                     <div class="page-header">
                         <h1 id="step2">Step 2 - Creating</h1>
                     </div>
